# FancyMumble

./: .gitignore  Cargo.toml  README.md  cargo_err.txt  check_out.txt  clippy_android_out.txt
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
crates/fancy-utils/src/: image_filter.rs  permissions.rs
crates/mumble-protocol/: Cargo.toml
crates/mumble-protocol/doc/: detailed-design.md  marketplace-api.md
crates/mumble-protocol/proto/: Mumble.proto
crates/mumble-protocol/src/: client.rs  fancy_codec.rs  fancy_message_support.rs  message.rs  state.rs
crates/mumble-protocol/src/audio/: decoder.rs  mixer.rs
crates/mumble-protocol/src/command/: join_channel.rs  mod.rs  request_fancy_onboarding_response.rs  send_fancy_live_doc_announce.rs  send_fancy_live_doc_open.rs  send_fancy_onboarding_config_update.rs  send_fancy_onboarding_response.rs  send_fancy_plugin_admin.rs  send_fancy_poll.rs  send_fancy_poll_vote.rs  send_fancy_server_settings_update.rs  send_plugin_data.rs  send_plugin_message.rs  set_channel_state.rs
crates/mumble-protocol/src/persistent/: config.rs
crates/mumble-protocol/src/persistent/keys/: types.rs
crates/mumble-protocol/src/proto/: mumble_proto.rs
crates/mumble-protocol/src/transport/: audio_codec.rs  codec.rs  tcp.rs  udp.rs
crates/mumble-protocol/tests/: integration.rs  pchat_integration.rs
crates/mumble-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/mumble-tauri/capabilities/: default.json
crates/mumble-tauri/src/: lib.rs  logging.rs
crates/mumble-tauri/src/app/: builder.rs  dev_server.rs  mod.rs  prefs.rs  webview.rs
crates/mumble-tauri/src/audio/: android.rs  desktop.rs  mod.rs  rodio_desktop.rs
crates/mumble-tauri/src/commands/: admin.rs  audio.rs  certificates.rs  channels.rs  connection.rs  files.rs  messaging.rs  mod.rs  onboarding.rs  plugin_admin.rs  plugin_info.rs  popout.rs  profile.rs  registry.rs  server_settings.rs  servers.rs  system.rs
crates/mumble-tauri/src/commands/draw_overlay/: mod.rs
crates/mumble-tauri/src/platform/: mod.rs  windows.rs
crates/mumble-tauri/src/platform/android/: connection_service.rs
crates/mumble-tauri/src/platform/window/: mod.rs
crates/mumble-tauri/src/state/: admin.rs  audio.rs  audio_tasks.rs  calibration.rs  channels.rs  connection.rs  event_handler.rs  file_server.rs  local_cache.rs  mod.rs  onboarding.rs  plugin_admin.rs  protocol_commands.rs  query.rs  registry.rs  server_settings.rs  types.rs  voice_replay.rs
crates/mumble-tauri/src/state/handler/: channel_state.rs  live_doc.rs  mod.rs  onboarding.rs  permission_denied.rs  plugin_admin.rs  plugin_data.rs  plugin_message.rs  poll.rs  reject.rs  server_settings.rs  server_sync.rs  tests.rs  text_message.rs  user_list.rs  (+3 more)
crates/mumble-tauri/ui/: .gitignore  eslint.config.mjs  package-lock.json  package.json  vite.config.ts  vitest.setup.ts
crates/mumble-tauri/ui/src/: App.tsx  dmStorage.ts  friendsChannel.ts  friendsStorage.ts  global.css  icons.ts  lazyBlobs.ts  main.tsx  personalizationStorage.ts  preferencesStorage.ts  profileFormat.ts  registeredTextureLease.ts  serverStorage.ts  store.ts  testids.ts  types.ts
crates/mumble-tauri/ui/tsc_trace/: trace.json
scripts/: bench-app.ps1  bench-history.csv  cdp-inspect.mjs  cdp-memory-analysis.mjs  dhat-top.mjs  measure-memory.ps1
(+624 files in other folders)
